website fixes UI text size, spacing, columns

--- a/website/src/themes/responsive.scss
+++ b/website/src/themes/responsive.scss
@@ -1,17 +1,22 @@
 @media screen and (max-width: 767px) {
   html,
   body {
-    font-size: 12px;
+    font-size: 13px;
+  }
+  h1 {
+    font-size: 2rem !important;
   }
   .header {
     padding: 0;
   }
   .footer {
-    position: relative;
     width: 100%;
     margin: 0;
     padding: 30px 0;
     background: rgba($color: #fef3ec, $alpha: 1);
+    h4 {
+      font-size: 1rem;
+    }
   }
   .wrapper-page {
     padding: 150px 0 0 0;
@@ -19,12 +24,9 @@
 }
 // TABLET
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  html,
-  body {
-    font-size: 12px;
-  }
+
   .footer {
-    position: relative;
+
     width: 100%;
     padding: 30px 0 30px 5vw;
     margin: 0;
