--- a/website/src/themes/style.scss
+++ b/website/src/themes/style.scss
@@ -18,11 +18,11 @@ body {
 }
 
 .b-top {
-  border-top: 1px solid black;
+  border-top: 1px solid var(--font-color-primary);
 }
 
 .b-left {
-  border-left: 1px solid black;
+  border-left: 1px solid var(--font-color-primary);
 }
 
 .gap {
@@ -58,17 +58,19 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-.header a, .footer a {
+.header a,
+.footer a {
   text-underline-offset: 10px !important;
 }
 h1 {
   font-family: "IBM Plex Serif", serif;
   font-weight: 300 !important;
-  font-size: 3.25rem;
+  font-size: 3.25rem !important;
   line-height: 125%;
   color: var(--font-color-primary);
   b {
-    font-weight: 900 !important;
+    font-family: "Inter";
+    font-weight: 700 !important;
   }
 }
 h3 {
@@ -77,7 +79,7 @@ h3 {
   font-weight: 700 !important;
   font-size: 0.75rem !important;
   line-height: 283% !important;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
   color: var(--font-color-primary);
   margin: 0;
@@ -85,7 +87,7 @@ h3 {
 h4 {
   font-family: "Inter";
   font-weight: 600;
-  font-size: 1.125rem;
+  font-size: 1.125rem !important;
   line-height: 125%;
   color: var(--font-color-primary);
 }
@@ -103,8 +105,8 @@ p {
 
   font-family: "IBM Plex Serif";
   font-style: normal;
-  font-weight: 500;
-  font-size: 0.875rem;
+  font-weight: 400;
+  font-size: 0.9rem;
   line-height: 125%;
   color: var(--font-color-primary);
 }
@@ -145,7 +147,8 @@ p {
   padding: 0 5vw 100px 5vw;
   background: rgba($color: #fef3ec, $alpha: 0.8);
   .nav-link {
-    @include style-font();
+    font-family: "Inter";
+    color: var(--font-color-primary);
     font-size: 0.938rem;
     font-weight: 600;
     line-height: 125%;
@@ -186,8 +189,9 @@ p {
     }
   }
   .nav-link {
-    @include style-font();
+    font-family: "Inter";
     font-size: 0.938rem;
+    color: var(--font-color-primary);
     font-weight: 600;
     line-height: 125%;
     text-align: start;
